# Seal-C

./: CMakeLists.txt  README.md  build.sh  configure.sh  sealc.pc.in
cmake/: CPackSetup.cmake
include/dpp/: sslclient.h  wsclient.h
include/sealc/: cluster.h  constants.h  sealc.h  version.h
src/: test.c
src/dpp/: wsclient.c
src/sealc/: cluster.c  sealc.c
